rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__subquery_dimensions__subquery_dim_in_filter.snap
---
source: cubesqlplanner/src/tests/integration/subquery_dimensions.rs
expression: result
---
sales__total_amount
-------------------
1000.00
