rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__subquery_dimensions__subquery_dim_in_projection.snap
---
source: cubesqlplanner/src/tests/integration/subquery_dimensions.rs
expression: result
---
customers__total_spend | sales__total_amount
-----------------------+--------------------
200.00                 | 500.00             
130.00                 | 500.00             
40.00                  | 150.00             
NULL                   | 100.00
