rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__subquery_dimensions__subquery_dim_in_projection_and_filter.snap
---
source: cubesqlplanner/src/tests/integration/subquery_dimensions.rs
expression: result
---
customers__total_spend | sales__total_amount
-----------------------+--------------------
130.00                 | 500.00             
200.00                 | 500.00
